finance-app-backend/devops/k8s/api-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: api
    labels:
        istio-injection: enabled
