finance-app-backend/devops/k8s/backend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: finance-app-backend-deployment
    namespace: api
    labels:
        app: finance-app-backend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: finance-app-backend
    template:
        metadata:
            labels:
                app: finance-app-backend
        spec:
            containers:
                - name: finance-app-backend
                  image: local/finance-app-backend
                  ports:
                      - name: http
                        containerPort: 8080
                  resources:
                      requests:
                          memory: "256Mi"
                          cpu: "250m"
                      limits:
                          memory: "512Mi"
                          cpu: "500m"
                  readinessProbe:
                      httpGet:
                          path: /management/health/readiness
                          port: 8080
                      initialDelaySeconds: 20
                      periodSeconds: 15
                      failureThreshold: 6
                  livenessProbe:
                      httpGet:
                          path: /management/health/liveness
                          port: 8080
                      initialDelaySeconds: 120
