finance-app-backend/devops/k8s/database-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: postgresql-deployment
    namespace: db
    labels:
        app: postgresql
spec:
    replicas: 1
    selector:
        matchLabels:
            app: postgresql
    template:
        metadata:
            labels:
                app: postgresql
        spec:
            containers:
                - name: postgresql
                  image: postgres:16
                  ports:
                      - containerPort: 5432
                  livenessProbe:
                      exec:
                          command:
                              - pg_isready
                              - -U
                              - financeapp
                      initialDelaySeconds: 30
                      periodSeconds: 10
                      timeoutSeconds: 5
                      successThreshold: 1
                      failureThreshold: 3
                  readinessProbe:
                      exec:
                          command:
                              - pg_isready
                              - -U
                              - financeapp
                      initialDelaySeconds: 5
                      periodSeconds: 10
                      timeoutSeconds: 1
                      successThreshold: 1
                      failureThreshold: 3
