finance-app-backend/devops/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: finance-app-backend-service
    namespace: api
spec:
    selector:
        app: finance-app-backend
    ports:
        - name: http
          port: 8080
