finance-app-backend/devops/k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: postgresql-service
    namespace: db
spec:
    selector:
        app: postgresql
    ports:
        - protocol: TCP
          port: 5432
          targetPort: 5432
