finance-app-backend/devops/k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api-ingress
    namespace: api
    annotations:
        kubernetes.io/ingress.class: traefik
        traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
    rules:
        - host: api.local.gd
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: finance-app-backend-service
                            port:
                                number: 8080
